@@ -12,6 +12,7 @@
  ~ Cykloatlas: max zoom level extended to 16
  + New map source: Canada Toporama  
  + Convert an existing atlas profile to a different output format 
+ ! Loading of custom CloudMade maps fixed
 
 1.9 preview 11 (2011-03-02)
  ! Error when using a BeanShell map source with certain atlas formats
